<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dresses_activity"
    android:background="@drawable/login"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shoes"
        android:contentDescription="@string/shoes"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female_shoes"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/teal_200" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/shoesPara"
        android:justificationMode="inter_word"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share"
        android:background="@null"
        android:layout_marginStart="10dp"/>

</LinearLayout>